Refs #140559 - Fix margin for facets in stuck container.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -165,6 +165,14 @@ div#page-document {
       padding-left: 0px;
       margin-top: 3em;
 
+      div.scrolled {
+        div.stuck-container {
+          div.cards {
+            margin-top: 0px;
+          }
+        }
+      }
+
       .card .meta {
         color: @s-medium-gray2 !important;
       }
